<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QExt2</string>
    <string name="extension_name">QExt2</string>
    <string name="qext2_primary_name">QExt2 Primary</string>
    <string name="qext2_primary_desc">Speed, power, HR, cadence, gear, grade</string>
    <string name="qext2_active_name">QExt2 Active</string>
    <string name="qext2_active_desc">Distance, IF10, speed, temp, W prime balance, wind</string>
    <string name="qext2_active_static_name">QExt2 Active Static</string>
    <string name="qext2_active_static_desc">Distance, IF10, speed, temp, W prime balance, wind (no overlay)</string>
    <string name="qext2_stats_name">QExt2 STATS</string>
    <string name="qext2_stats_desc">NP, IF, VI, TSS, reserve, HRD, route, battery, deadline</string>
    <string name="qext2_stats_v2_name">QExt2 STATS v2 (test)</string>
    <string name="qext2_kokpit_nav_name">QExt2 KOKPIT nawigacja (test)</string>
    <string name="qext2_kokpit_inst_name">QExt2 KOKPIT instrumenty (test)</string>
    <string name="qext2_stats_live_name">QExt2 STATS v2</string>
    <string name="qext2_stats_live_desc">STATS: NP IF VI, przebieg, RSRV XSS KCAL, trasa z nawierzchnia, przewyzszenie, CARB, KAD, BAT</string>
    <string name="qext2_kokpit_nav_live_name">QExt2 KOKPIT nawigacja</string>
    <string name="qext2_kokpit_nav_live_desc">Komunikaty z trasy, km, ETA, trasa z nawierzchnia, pogoda, wiatr</string>
    <string name="qext2_kokpit_inst_live_name">QExt2 KOKPIT instrumenty</string>
    <string name="qext2_kokpit_inst_live_desc">Moc i predkosc na lukach, tetno, W bal, kadencja, bieg</string>
    <string name="qext2_kokpit_inst_desc">Polkole mocy i predkosci, tetno, W bal, kadencja, bieg z kaseta</string>
    <string name="qext2_kokpit_nav_desc">Komunikaty z trasy, km/ETA/zmrok, trasa z nawierzchnia, nachylenie, przewyzszenie, opad, wiatr</string>
    <string name="qext2_stats_v2_desc">STATS rysowane: NP/IF/VI, RSRV/XSS/KCAL, trasa, nawierzchnia, przewyzszenie, CARB, KAD, BAT</string>
    <string name="qext2_kokpit2_nav_name">QExt2 KOKPIT 2 nav</string>
    <string name="qext2_kokpit2_nav_desc">Komunikaty (tlo wg waznosci), pogoda, wiatr, nachylenie, DST/DTD/ETA</string>
    <string name="qext2_kokpit2_instr_name">QExt2 KOKPIT 2 instr</string>
    <string name="qext2_kokpit2_instr_desc">Belka trasy, moc ze strefa, predkosc, kadencja, tetno, bieg, W bal</string>
</resources>
